--- a/service/index.html
+++ b/service/index.html
@@ -13,18 +13,18 @@
 <title>Jekyll Theme - Home Page - Massively</title>
 <meta name="description" content="Every great website starts with a great homepage. The homepage tells your viewers what your site is all about and gives your viewers a place to come back to.">
 
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/icon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/icon/favicon-16x16.png">
-<link rel="manifest" href="/assets/icon/manifest.json">
-<link rel="mask-icon" href="/assets/icon/safari-pinned-tab.svg" color="#5bbad5">
-<link rel="shortcut icon" href="/assets/icon/favicon.ico">
-<meta name="msapplication-config" content="/assets/icon/browserconfig.xml">
+<link rel="apple-touch-icon" sizes="180x180" href="/service/assets/icon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/service/assets/icon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/service/assets/icon/favicon-16x16.png">
+<link rel="manifest" href="/service/assets/icon/manifest.json">
+<link rel="mask-icon" href="/service/assets/icon/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/service/assets/icon/favicon.ico">
+<meta name="msapplication-config" content="/service/assets/icon/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
 
 <!-- CSS -->
-<link rel="stylesheet" href="/assets/css/main.css" />
-<noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
+<link rel="stylesheet" href="/service/assets/css/main.css"/>
+<noscript><link rel="stylesheet" href="/service/assets/css/noscript.css"/></noscript>
 
 	</head>
 	<body class="is-loading">
@@ -34,16 +34,16 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="/" class="logo">Криола Сервис</a>
+					<a href="/service/" class="logo">Криола Сервис</a>
 				</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 
             <ul class="links">
-  <li class=" active "><a href="/">Главная</a></li>
-  <li class=""><a href="/blog/">Предложения</a></li>
-  <li class=""><a href="/about/">Контакты</a></li>
+  <li class=" active "><a href="/service/">Главная</a></li>
+  <li class=""><a href="/service/blog/">Предложения</a></li>
+  <li class=""><a href="/service/about/">Контакты</a></li>
 </ul>
 
 <ul class="icons">
@@ -75,12 +75,12 @@
   								<article>
   									<header>
   										<span class="date">31 Oct 2017</span>
-  										<h2><a href="/blog/welcome-to-massively-the-jekyll-theme/">Обустройство Скважины</a></h2>
+  										<h2><a href="/service/blog/welcome-to-massively-the-jekyll-theme/">Обустройство Скважины</a></h2>
   									</header>
-  									<a href="/blog/welcome-to-massively-the-jekyll-theme/" class="image fit"><img src="/images/pic02.jpg" alt="" /></a>
+  									<a href="/service/blog/welcome-to-massively-the-jekyll-theme/" class="image fit"><img src="/service/images/pic02.jpg" alt="" /></a>
   									<p>Занимаемся обустройством скважин</p>
   									<ul class="actions">
-  										<li><a href="/blog/welcome-to-massively-the-jekyll-theme/" class="button">Читать дальше</a></li>
+  										<li><a href="/service/blog/welcome-to-massively-the-jekyll-theme/" class="button">Читать дальше</a></li>
   									</ul>
   								</article>
                   
@@ -91,7 +91,7 @@
 					<!-- Footer -->
 						<footer>
               <ul class="actions">
-								<li><a href="/blog/" class="button">Наши предложения</a></li>
+								<li><a href="/service/blog/" class="button">Наши предложения</a></li>
               </ul>
 						</footer>
 					</div>
@@ -115,7 +115,7 @@
       <ul class="actions">
         <li><input type="submit" value="Отправить" /></li>
       </ul>
-      <input type="hidden" name="slap_redirect" value="http://dizzyatlovich.github.io/service/thank-you" /> <!-- slap_redirect allows you to set a custom redirect/thank you page -->
+      <input type="hidden" name="slap_redirect" value="http://dizzyatlovich.github.io/thank-you" /> <!-- slap_redirect allows you to set a custom redirect/thank you page -->
     </form>
   </section>
   <section class="split contact">
@@ -151,12 +151,13 @@
 
 			<!-- Scripts -->
 			<!-- DYN -->
-<script src="/assets/js/jquery.min.js"></script>
-<script src="/assets/js/jquery.scrollex.min.js"></script>
-<script src="/assets/js/jquery.scrolly.min.js"></script>
-<script src="/assets/js/skel.min.js"></script>
-<script src="/assets/js/util.js"></script>
-<script src="/assets/js/main.js"></script>
+<script src="/service/assets/js/jquery.min.js"></script>
+<script src="/service/assets/js/jquery.scrollex.min.js"></script>
+<script src="/service/assets/js/jquery.scrolly.min.js"></script>
+<script src="/service/assets/js/skel.min.js"></script>
+<script src="/service/assets/js/util.js"></script>
+<script src="/service/assets/js/main.js"></script>
+
 
 			<script async src="https://www.googletagmanager.com/gtag/js?id=default"></script>
 <script>
