--- a/service/thank-you/index.html
+++ b/service/thank-you/index.html
@@ -124,7 +124,7 @@
     </section>
     <section>
       <h3>Телефон</h3>
-      <p><a href="tel:+375 29 611 91 30">+375 29 611 91 30</a></p>
+      <p><a href="tel:+375 (29) 6111 938">+375 (29) 6111 938</a></p>
     </section>
     <section>
       <h3>Email</h3>
