--- a/service/index.html
+++ b/service/index.html
@@ -32,6 +32,23 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
 
+				<nav id="nav_">
+
+            <ul class="links_">
+  <li><p>+375 (29) 6111 938</p></li>
+  <li><p>Минский р-н., д. Чуриловичи, ул. Центральная, д. 8, пом. 2</p></li>
+</ul>
+
+
+<ul class="icons">
+  <li><a href="https://twitter.com/default" class="icon fa-twitter" rel="nofollow"><span class="label">Twitter</span></a></li>
+  <li><a href="https://facebook.com/default" class="icon fa-facebook" rel="nofollow"><span class="label">Facebook</span></a></li>
+  <li><a href="https://instagram.com/default" class="icon fa-instagram" rel="nofollow"><span class="label">Instagram</span></a></li>
+</ul>
+
+
+					</nav>
+
 				<!-- Header -->
 				<header id="header">
 					<a href="/service/" class="logo">Криола Сервис</a>
@@ -46,11 +63,6 @@
   <li class=""><a href="/service/about/">Контакты</a></li>
 </ul>
 
-<ul class="icons">
-  <li><a href="https://twitter.com/default" class="icon fa-twitter" rel="nofollow"><span class="label">Twitter</span></a></li>
-  <li><a href="https://facebook.com/default" class="icon fa-facebook" rel="nofollow"><span class="label">Facebook</span></a></li>
-  <li><a href="https://instagram.com/default" class="icon fa-instagram" rel="nofollow"><span class="label">Instagram</span></a></li>
-</ul>
 
 
 					</nav>
@@ -121,7 +133,7 @@
   <section class="split contact">
     <section class="alt">
       <h3>Адрес</h3>
-      <p>Чуриловичи, Беларусь</p>
+      <p>Минский р-н., д. Чуриловичи, ул. Центральная, д. 8, пом. 2</p>
     </section>
     <section>
       <h3>Телефон</h3>
